- add BaseRv classes - complete sample code - fix some issues - convert all code to kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
 
     //GSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
 }
