--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
     defaultConfig {
         minSdkVersion 22
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -27,15 +27,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation ('com.github.hamedgramzi:everythingManager:99b7f48a0e'){
-        exclude group: 'androidx.databinding'
-    }
-//    implementation "androidx.core:core-ktx:+"
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.databinding:databinding-runtime:4.2.2'
 }
-//repositories {
-//    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-//    mavenCentral()
-//}
