--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,4 +29,6 @@ android {
 dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.databinding:databinding-runtime:4.2.2'
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
+
 }
